--- a/arsnalspp/package.json
+++ b/arsnalspp/package.json
@@ -11,6 +11,7 @@
     "@vue/cli": "^3.2.1",
     "core-js": "^3.6.5",
     "vue": "^2.6.11",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
